# Worker_Management_System

./: CMakeLists.txt  README.md  main.cpp
Cmake/: CMakeCache.txt  Makefile  cmake_install.cmake  compile_commands.json
Cmake/.cmake/api/v1/reply/: cache-v2-176c7c1761ad0185776c.json  cache-v2-670af66d1afc14bd0947.json  cmakeFiles-v1-2996fd917b033ec02eb2.json  cmakeFiles-v1-34a8faa37111e2d036d8.json  codemodel-v2-b14d22539dcdb5012a02.json  codemodel-v2-c430e4f107afbed7e7d8.json  codemodel-v2-ea13c5588a11e10c364e.json  codemodel-v2-eabc878636eb592076b5.json  directory-member-Debug-2dba94cb6d14299ad9df.json  directory-workerManager-Debug-36e51f0b47b38e8e695f.json  index-2026-03-01T13-09-14-0596.json  index-2026-03-01T13-50-01-0588.json  index-2026-03-02T13-01-13-0257.json  index-2026-03-03T05-27-51-0285.json  target-WorkerManager-Debug-867379d8d87bf81c9da5.json  target-WorkerManager-Debug-d23215a1045b836af612.json  target-member_lib-Debug-61388e9ebe69a84f1137.json  target-member_lib-Debug-a7b7836fc88ab7917e9b.json  target-workerManager_lib-Debug-78c804f4406c2ee7e7b0.json  toolchains-v1-58cc194ec19806d7129c.json
Cmake/member/: Makefile  cmake_install.cmake
Cmake/workerManager/: Makefile  cmake_install.cmake
member/: CMakeLists.txt  boss.cpp  boss.h  employee.cpp  employee.h  manager.cpp  manager.h  worker.h
workerManager/: CMakeLists.txt  workManager.cpp  workerManager.cpp  workerManager.h
